Add QR Code Integration for Deck Sharing
 Features Added:
- QR code generation for deck sharing with synergy scores
- Camera-based QR code scanning for deck import
- Deck preview and import confirmation modals
- Synergy scoring system based on deck composition
- Mobile-responsive QR interface with animations

 Technical Implementation:
- New deck-qr-integration.js with complete QR functionality
- Enhanced deckforge.css with QR-specific styling
- Updated index.html and deckforge.js for integration
- Added Share QR and Scan QR buttons to Deck Builder
- Integrated QRCode.js and jsQR libraries for generation/scanning

 UI/UX Improvements:
- Magic-themed modals with wizard emojis
- Animated synergy meters with gradient colors
- Touch-friendly mobile interface
- Seamless integration with existing dark theme
- Error handling and validation notifications

Ready for testing on Vercel deployment!

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MTG Tracker",
-  "short_name": "MTG",
+  "name": "Deck Forge",
+  "short_name": "Deck Forge",
   "description": "Track your Magic: The Gathering card collection with price monitoring, rules reference, and comprehensive search functionality",
   "start_url": "/",
   "display": "standalone",
