Fix all Vercel deployment issues
- Fixed manifest.json icon path inconsistency
- Simplified vercel.json routing configuration to prevent conflicts
- Updated service worker to cache all enhanced files
- Created comprehensive Vercel deployment guide
- Ready for production deployment with PWA features

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   "categories": ["games", "utilities", "productivity"],
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
