--- a/manifest.json
+++ b/manifest.json
@@ -2,57 +2,57 @@
   "name": "Deck Forge",
   "short_name": "Deck Forge",
   "description": "Track your Magic: The Gathering card collection with price monitoring, rules reference, and comprehensive search functionality",
-  "start_url": "/",
+  "start_url": "/mtg-collection-tracker/",
   "display": "standalone",
   "background_color": "#1a1a1a",
   "theme_color": "#4b0082",
   "orientation": "portrait-primary",
-  "scope": "/",
+  "scope": "/mtg-collection-tracker/",
   "lang": "en-US",
   "categories": ["games", "utilities", "productivity"],
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/mtg-collection-tracker/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-72x72.png",
+      "src": "/mtg-collection-tracker/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-96x96.png",
+      "src": "/mtg-collection-tracker/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-128x128.png",
+      "src": "/mtg-collection-tracker/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-144x144.png",
+      "src": "/mtg-collection-tracker/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-152x152.png",
+      "src": "/mtg-collection-tracker/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/mtg-collection-tracker/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-384x384.png",
+      "src": "/mtg-collection-tracker/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/mtg-collection-tracker/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
